@@ -1,3 +1,9 @@
+Tue Jul 29 16:34:56 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * utils/BMW/website/BMW.master.cs:
+
+          . Removed dead/commented code.
+
 Tue Jul 29 16:32:41 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * etc/SQL/CUTS-baseline.sql:
